# research-agora

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEROP.md  LICENSE  PLATFORM.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: new-skill.md  register-repo.md
.github/workflows/: ci.yml  deploy-site.yml
branding/: generate_spiral_final.py
dissemination/: create_carousel.py  create_cta_gif.py  create_demo_gif.py  launch-strategy.md  social-copy.md  social-media-strategy.md  twitter-thread-launch.md
dissemination/assets/: linkedin-carousel.pptx  make_banner.py
docs/: concepts.md  getting-started-readme-section.md  git-backup.md  privacy-gdpr.md  quickstart.md  verification.md
docs/examples/: README.md  advanced-research.md  code-and-data.md  literature-and-citations.md  technical-workflows.md  (+1 more)
registry/: BENCHMARKS.md  benchmarks.json  categories.json  index.json  results.json  schema.json
scripts/: add-metadata.py  cache_manager.py  convert-skill.py  create-marketplace.py  create-skill.py  generate-registry.py  generate-site.py  parse_latex.py  token_counter.py  validate-marketplace.py
templates/: CLAUDE.md.researcher  README.md  add-template.sh  analyze_template.py
tests/: conftest.py  test_agents.py  test_backward_compat.py  test_benchmarks.py  test_installation.py  test_marketplace.py  test_micro_skills.py  test_orchestrators.py  test_registry.py  test_skills.py  test_state_generation.py  test_theory_agents.py  test_token_counter.py
(+139 files in other folders)
