[project]
name = "research-agora"
version = "1.0.0"
description = "Research Agora - A plugin marketplace for Claude Code"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pyyaml>=6.0",
]
site = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]
dev = [
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources",
]
